store refresh tokens in two separate places for redundancy

--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,8 @@
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "deploy": "firebase deploy --only functions -P dev",
+    "deploy-prod": "firebase deploy --only functions -P prod",
     "logs": "firebase functions:log"
   },
   "engines": {
