--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "promise.allsettled": "^1.0.2"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
