--- a/functions/package.json
+++ b/functions/package.json
@@ -11,14 +11,14 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "10"
+    "node": "12"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/pubsub": "^2.8.0",
     "axios": "^0.19.2",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.11.0",
-    "promise.allsettled": "^1.0.2"
+    "firebase-functions": "^3.11.0"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
